DSODA-113 fix spacing between show title and message the show button

--- a/app/styles/components/_listen.scss
+++ b/app/styles/components/_listen.scss
@@ -161,7 +161,7 @@
   .message-the-show {
     display: flex;
     justify-content: center;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
     @include media("<medium") {
       justify-content: left;
       margin-bottom: 0;
@@ -179,6 +179,7 @@
       padding-right: 0;
       margin-left: auto;
       margin-right: auto;
+      line-height: 14px;
     }
 
     .u-icon--xs {
